fixes whitespace for remaining devices

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@ body {
   display: grid;
   width: 100vw;
   height: 100vh;
-  grid-template-rows: 2fr 1fr auto 1fr;
   overflow-x: hidden;
   grid-template-areas:
   "Header"
@@ -11,8 +10,6 @@ body {
   "Bottom";
   text-align: left;
   font-family: 'Roboto Condensed', sans-serif;
-  background-color: whitesmoke;
-  width: 100%;
   margin: 0;
 }
 
@@ -20,7 +17,7 @@ body {
   display: grid;
   width: 100vw;
   height: 100vh;
-  grid-template-rows: 1fr 1fr 10fr 1fr;
+  grid-template-rows: 1fr 1fr 20fr 1fr;
   grid-template-areas:
   "Header"
   "Nav"
